[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/screens/CountrySelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://material/light_hvscroll.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/ScalableScrollContainer.gd" type="Script" id=3]

[node name="CountrySelectionScreen" type="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 952.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="PanelEN" type="PanelContainer" parent="."]
margin_top = 1.0
margin_right = 1920.0
margin_bottom = 951.0
rect_min_size = Vector2( 1920, 950 )
size_flags_vertical = 0

[node name="VBox" type="VBoxContainer" parent="PanelEN"]
editor/display_folded = true
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 943.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelEN/VBox"]
editor/display_folded = true
margin_right = 1906.0
margin_bottom = 936.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
full_scale = true

[node name="VBox" type="VBoxContainer" parent="PanelEN/VBox/ScrollContainer"]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 10

[node name="Grid" type="GridContainer" parent="PanelEN/VBox/ScrollContainer/VBox"]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="TagContainer" type="VBoxContainer" parent="PanelEN/VBox/ScrollContainer/VBox/Grid"]
editor/display_folded = true
margin_right = 637.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 1080 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect" type="ReferenceRect" parent="PanelEN/VBox/ScrollContainer/VBox/Grid/TagContainer"]
margin_right = 637.0

[node name="CountryContainer" type="VBoxContainer" parent="PanelEN/VBox/ScrollContainer/VBox/Grid"]
editor/display_folded = true
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 1080 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect" type="ReferenceRect" parent="PanelEN/VBox/ScrollContainer/VBox/Grid/CountryContainer"]
margin_right = 637.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="ReferenceRect" type="ReferenceRect" parent="PanelEN/VBox/ScrollContainer/VBox/Grid"]
margin_left = 1282.0
margin_right = 1919.0
margin_bottom = 1080.0
rect_min_size = Vector2( 60, 1080 )
size_flags_horizontal = 3

